echo/echo_ingress_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "acme-clusterissuer"
  labels:
    use-http01-solver: "true"
spec:
  tls:
  - hosts:
    - "echo.name.test.com"
    secretName: echo-test
  rules:
  - host: "echo.name.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
